--- a/course/Problem001_Function/001.ipynb
+++ b/course/Problem001_Function/001.ipynb
@@ -1,53 +1,81 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Problem 1.1 Functions\n",
-    "\n",
-    "implement following simple functions"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.6.5"
+    },
+    "colab": {
+      "name": "001.ipynb",
+      "provenance": [],
+      "toc_visible": true
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def square(x):\n",
-    "    #TBD\n",
-    "    pass\n",
-    "\n",
-    "def times2(x):\n",
-    "    #TBD\n",
-    "    pass\n",
-    "\n",
-    "def average(x1, x2, x3, x4, x5):\n",
-    "    #TBD\n",
-    "    pass"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3TTsBpuFEtF_"
+      },
+      "source": [
+        "## Problem 1.1 Functions\n",
+        "\n",
+        "implement following simple functions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qz6utmgJEtGA",
+        "outputId": "eb55ecf9-27fc-4343-b324-03f02bf487f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        }
+      },
+      "source": [
+        "def square(x):\n",
+        "    return x*x\n",
+        "    pass\n",
+        "\n",
+        "def times2(x):\n",
+        "    return 2*x\n",
+        "    pass\n",
+        "\n",
+        "def average(x1, x2, x3, x4, x5):\n",
+        "    return (x1+x2+x3+x4+x5)/5\n",
+        "    pass\n",
+        "\n",
+        "print(times2(10) == 20)\n",
+        "print(square(6) == 36)\n",
+        "print(average(1,2,3,4,5) == 3.0)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "True\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    }
+  ]
 }
