--- a/course/Problem002_Dataset/002.ipynb
+++ b/course/Problem002_Dataset/002.ipynb
@@ -21,7 +21,8 @@
     },
     "colab": {
       "name": "002.ipynb",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     }
   },
   "cells": [
@@ -40,24 +41,66 @@
       "cell_type": "code",
       "metadata": {
         "id": "ISzjLxjYvquG",
-        "outputId": "05524a4c-da4d-4a57-e2c2-aa446fbea8ec",
+        "outputId": "6e21cd39-fd42-4e1c-816e-07e1282de441",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 714
         }
       },
       "source": [
         "from sklearn.datasets import fetch_california_housing\n",
-        "house_data = fetch_california_housing()"
+        "house_data = fetch_california_housing()\n",
+        "dir(house_data)\n",
+        "print(house_data['DESCR'])"
       ],
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Downloading Cal. housing from https://ndownloader.figshare.com/files/5976036 to /root/scikit_learn_data\n"
+            ".. _california_housing_dataset:\n",
+            "\n",
+            "California Housing dataset\n",
+            "--------------------------\n",
+            "\n",
+            "**Data Set Characteristics:**\n",
+            "\n",
+            "    :Number of Instances: 20640\n",
+            "\n",
+            "    :Number of Attributes: 8 numeric, predictive attributes and the target\n",
+            "\n",
+            "    :Attribute Information:\n",
+            "        - MedInc        median income in block\n",
+            "        - HouseAge      median house age in block\n",
+            "        - AveRooms      average number of rooms\n",
+            "        - AveBedrms     average number of bedrooms\n",
+            "        - Population    block population\n",
+            "        - AveOccup      average house occupancy\n",
+            "        - Latitude      house block latitude\n",
+            "        - Longitude     house block longitude\n",
+            "\n",
+            "    :Missing Attribute Values: None\n",
+            "\n",
+            "This dataset was obtained from the StatLib repository.\n",
+            "http://lib.stat.cmu.edu/datasets/\n",
+            "\n",
+            "The target variable is the median house value for California districts.\n",
+            "\n",
+            "This dataset was derived from the 1990 U.S. census, using one row per census\n",
+            "block group. A block group is the smallest geographical unit for which the U.S.\n",
+            "Census Bureau publishes sample data (a block group typically has a population\n",
+            "of 600 to 3,000 people).\n",
+            "\n",
+            "It can be downloaded/loaded using the\n",
+            ":func:`sklearn.datasets.fetch_california_housing` function.\n",
+            "\n",
+            ".. topic:: References\n",
+            "\n",
+            "    - Pace, R. Kelley and Ronald Barry, Sparse Spatial Autoregressions,\n",
+            "      Statistics and Probability Letters, 33 (1997) 291-297\n",
+            "\n"
           ],
-          "name": "stderr"
+          "name": "stdout"
         }
       ]
     },
@@ -65,7 +108,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "sJO7qxo3vquK",
-        "outputId": "ca10cfd4-8b1a-4543-fbe1-8eefcb3fb92d",
+        "outputId": "64afcbd7-7a24-4381-f482-e486a5b8a6b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -73,8 +116,37 @@
       },
       "source": [
         "# How many housing blocks are there ?\n",
-        "dir(house_data)\n",
-        "# len(house_data['data'])"
+        "len(house_data['data'])"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "20640"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-OQ6etuOvquO",
+        "outputId": "9c3efc6d-9c1a-4fdd-a685-047fd193992d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "# A house block has how many attributes?\n",
+        "len(house_data['feature_names'])"
       ],
       "execution_count": 7,
       "outputs": [
@@ -82,7 +154,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['DESCR', 'data', 'feature_names', 'target']"
+              "8"
             ]
           },
           "metadata": {
@@ -95,38 +167,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-OQ6etuOvquO",
-        "outputId": "567ee167-daf1-4c74-f024-d80b5776e1da",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "# A house block has how many attributes?\n",
-        "len(house_data['feature_names'])"
-      ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "8"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 10
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "u-hQtgIcvquR",
-        "outputId": "6433c4d4-4ece-4229-84e7-58beb313ad48",
+        "outputId": "b416ab84-decb-4b5b-ee8b-56e55b537956",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -136,7 +178,7 @@
         "# Whats the average cost of the first house block?\n",
         "house_data['target'][0]"
       ],
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -148,7 +190,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 8
         }
       ]
     },
