--- a/course/Problem002_Dataset/002.ipynb
+++ b/course/Problem002_Dataset/002.ipynb
@@ -50,7 +50,7 @@
       "source": [
         "from sklearn.datasets import fetch_california_housing\n",
         "house_data = fetch_california_housing()\n",
-        "dir(house_data)\n",
+        "\n",
         "print(house_data['DESCR'])"
       ],
       "execution_count": 6,
@@ -108,6 +108,36 @@
       "cell_type": "code",
       "metadata": {
         "id": "sJO7qxo3vquK",
+        "outputId": "fd7dbb5c-e500-4b9e-eeb6-9c0898f67c91",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "# \n",
+        "dir(house_data)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['DESCR', 'data', 'feature_names', 'target']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bY_Ga-M3Lx7k",
         "outputId": "64afcbd7-7a24-4381-f482-e486a5b8a6b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -118,7 +148,7 @@
         "# How many housing blocks are there ?\n",
         "len(house_data['data'])"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
