--- a/course/Problem004_OnlyNumbers/004.ipynb
+++ b/course/Problem004_OnlyNumbers/004.ipynb
@@ -66,7 +66,7 @@
         "\n",
         "# TBD, convert docs to X, i.e a dataset of features which ML algorithm can understand"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,7 +89,7 @@
         "features = vectorizer.get_feature_names()\n",
         "print(f'Features: {features}')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +113,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "G6uLo0VHalsK",
-        "outputId": "c664be11-516d-4eaa-9333-4e3e630f834d",
+        "outputId": "be18ec41-6cf1-42d5-fc87-9684ade5074e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 799
@@ -125,7 +125,7 @@
         "\n",
         "print(digits_data['DESCR'])"
       ],
-      "execution_count": 12,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +185,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "1X5aRah2nYho",
-        "outputId": "ca8ed48e-3b8b-4df3-ba28-2b0fa79bc5c8",
+        "outputId": "9cdbd27b-8a05-4887-ace6-2e8da1269ec1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -194,7 +194,7 @@
       "source": [
         "dir(digits_data)"
       ],
-      "execution_count": 13,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -206,7 +206,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 39
         }
       ]
     },
@@ -214,7 +214,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "GM64XYLfn8q6",
-        "outputId": "92d5f113-19b9-45a2-fb9a-8dcf7d57d7f8",
+        "outputId": "b910fb86-6509-4374-b40e-8bbda1caa348",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -223,7 +223,7 @@
       "source": [
         "len(digits_data['target_names'])"
       ],
-      "execution_count": 23,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -235,7 +235,128 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gZSlaHWLxJQ7"
+      },
+      "source": [
+        "# Create features\n",
+        "X = digits_data.data"
+      ],
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "akQvtSpuxJg7"
+      },
+      "source": [
+        "# Create target\n",
+        "y = digits_data.target"
+      ],
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "frGHrT0SxKXD",
+        "outputId": "e423d0bc-030c-4ca9-b1ba-04d7fbf729b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "# Check shape of X\n",
+        "X.shape"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1797, 64)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EVwtkoXmyfJG",
+        "outputId": "9233c47b-a648-4f5a-a1fe-1a3c0af6704a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "# Target Value\n",
+        "y[59]"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u8WUCteyx_Q2",
+        "outputId": "ec39fb47-db71-42a6-a15b-6672de9594f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 153
+        }
+      },
+      "source": [
+        "# Each image is 8px * 8px that's why 64 pixels\n",
+        "digits_data.images[4]"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.,  0.,  0.,  1., 11.,  0.,  0.,  0.],\n",
+              "       [ 0.,  0.,  0.,  7.,  8.,  0.,  0.,  0.],\n",
+              "       [ 0.,  0.,  1., 13.,  6.,  2.,  2.,  0.],\n",
+              "       [ 0.,  0.,  7., 15.,  0.,  9.,  8.,  0.],\n",
+              "       [ 0.,  5., 16., 10.,  0., 16.,  6.,  0.],\n",
+              "       [ 0.,  4., 15., 16., 13., 16.,  1.,  0.],\n",
+              "       [ 0.,  0.,  0.,  3., 15., 10.,  0.,  0.],\n",
+              "       [ 0.,  0.,  0.,  2., 16.,  4.,  0.,  0.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 47
         }
       ]
     },
@@ -261,7 +382,7 @@
         "# TBD for image 12 show image and label, use function show_image\n",
         "show_image(digits_data.images [12], digits_data.target [12])"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -295,13 +416,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rB5Yz-esalsY"
+        "id": "rB5Yz-esalsY",
+        "outputId": "b451f6cf-8e01-4376-83d0-75a63e32e97b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        }
       },
       "source": [
-        "# TBD"
+        "digits_data.data[12]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0.,  0.,  5., 12.,  1.,  0.,  0.,  0.,  0.,  0., 15., 14.,  7.,\n",
+              "        0.,  0.,  0.,  0.,  0., 13.,  1., 12.,  0.,  0.,  0.,  0.,  2.,\n",
+              "       10.,  0., 14.,  0.,  0.,  0.,  0.,  0.,  2.,  0., 16.,  1.,  0.,\n",
+              "        0.,  0.,  0.,  0.,  6., 15.,  0.,  0.,  0.,  0.,  0.,  9., 16.,\n",
+              "       15.,  9.,  8.,  2.,  0.,  0.,  3., 11.,  8., 13., 12.,  4.])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 57
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -320,13 +463,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5FdqvCU9alse"
+        "id": "5FdqvCU9alse",
+        "outputId": "ae6789bd-a8ca-4a85-cb56-46ac238bc4db",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        "# TBD"
+        "digits_data.data[12][20]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 58
+        }
+      ]
     }
   ]
 }
