--- a/course/Problem007_Error/007.ipynb
+++ b/course/Problem007_Error/007.ipynb
@@ -49,7 +49,11 @@
       "cell_type": "code",
       "metadata": {
         "scrolled": true,
-        "id": "Q88IbdxiSn0W"
+        "id": "Q88IbdxiSn0W",
+        "outputId": "19cb7354-7e4d-4152-e8bc-d5e64b51f59d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "'''\n",
@@ -87,10 +91,26 @@
         "def f_hat(x1, x2):\n",
         "    return int(x1/2 + x2)\n",
         "\n",
-        "#TBD Compute Y_hat where y_hat = f_hat(x1, x2)\n"
+        "\n",
+        "#TBD Compute Y_hat where y_hat = f_hat(x1, x2)\n",
+        "Y_hat = [f_hat(x[0], x[1]) for x in X]\n",
+        "Y_hat\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[4, 9, 7, 7, 4, 15]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -104,27 +124,110 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VBHcW6MQSn0a"
+        "id": "VBHcW6MQSn0a",
+        "outputId": "7289c924-361d-4e76-d057-d25309b5ede6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "#TBD Compute Total(sum) Error between Y and Y_hat \n",
+        "total_error = sum([ z[0] - z[1] for z in zip(Y, Y_hat)])\n",
         "#TBD Compute Total absolute Error between Y and Y_hat \n",
+        "total_abs_error = sum([ abs(z[0] - z[1]) for z in zip(Y, Y_hat)])\n",
+        "print(total_abs_error)\n",
         "#TBD Compute Mean absolute Error between Y and Y_hat \n",
-        "#TBD Compute Mean Squared Error between Y and Y_hat"
+        "mean_abs_error = total_abs_error/len(Y)\n",
+        "print(mean_abs_error)\n",
+        "#TBD Compute Mean Squared Error between Y and Y_hat\n",
+        "mean_squared_error = sum([ (z[0] - z[1])**2 for z in zip(Y, Y_hat)])/len(Y)\n",
+        "print(mean_squared_error)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "18\n",
+            "3.0\n",
+            "33.333333333333336\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Vz3im1o4Sn0c"
+        "id": "Vz3im1o4Sn0c",
+        "outputId": "53f48557-a0ff-47ae-d4e6-07f05545b8ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "from sklearn.metrics import mean_absolute_error mean_squared_error\n",
+        "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
         "#Use sklearn\n",
         "#TBD Compute Mean absolute Error between Y and Y_hat \n",
-        "#TBD Compute Mean squared Error between Y and Y_hat"
+        "#TBD Compute Mean squared Error between Y and Y_hat\n",
+        "mean_squared_error(Y, Y_hat)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "33.333333333333336"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xFpIO9y9J3k3",
+        "outputId": "53fc9f21-7403-4f7c-c5e8-417174701ccd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "Y = np.array(Y)\n",
+        "Y_hat = np.array(Y_hat)\n",
+        "\n",
+        "Y - Y_hat"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "200"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1biqkHokJu1G"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
